# greed

./: Makefile  README.md
back/: .env.template  .gitignore  Cargo.toml  ReadMe.md  Rust server.postman_collection.json  diesel.toml  docker-compose.yml
back/migrations/2025-04-19-182054_create_users/: down.sql  up.sql
back/migrations/2025-04-20-063355_refresh_token/: up.sql
back/migrations/2025-04-22-082949_realty/: down.sql  up.sql
back/migrations/2025-04-22-083304_apartment/: down.sql  up.sql
back/migrations/2025-04-22-083341_token/: up.sql
back/migrations/2025-04-22-083437_user_apartment/: down.sql  up.sql
back/migrations/2025-04-22-083522_user_token/: down.sql  up.sql
back/src/: config.rs  contract_interfaces.rs  db.rs  description.rs  http.rs  lib.rs  main.rs  old_schema.rs  request.rs  schema.rs  store.rs  title.rs  token.rs
back/src/contracts/: contract_interfaces.rs  deployment.rs  mod.rs
back/src/models/: apartment.rs  mod.rs  realty.rs  refresh_token.rs  token.rs  user.rs  user_apartment.rs  user_token.rs
back/src/repositories/: apartment_repo.rs  mod.rs  realty_repo.rs  refresh_token_repo.rs  user_repo.rs
back/src/routes/: apartment.rs  auth.rs  mod.rs  realty.rs
back/src/services/: apartment_service.rs  auth_service.md  auth_service.rs  mod.rs  realty_service.rs  siwe_service.rs
back/src/types/: address.rs  description.rs  mod.rs  status.rs  title.rs  token.rs  url.rs
back/src/utils/: logger.rs  mod.rs  web3_verify.rs
foundry/: .env.anvil  .env.sepolia  .env.template  README.md  coverage.txt  foundry.toml  lcov.info  (+1 more)
(+96 files in other folders)
