[package]
name = "back"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "=0.8.1", features = ["sqlite"] }
rusqlite = "=0.32.1"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
alloy = { version = "0.13.0", features = ["full"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
lazy_static = "1.5.0"
bcrypt = "0.17.0"
uuid = { version = "1.2", features = ["v4"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
